main/llvm{19,20}: fix variable set in prepare() used by build()
prepare() and build() might not be run in the same shell environment.
For example when using abuild prepare && abuild build

--- a/main/llvm19/APKBUILD
+++ b/main/llvm19/APKBUILD
@@ -88,6 +88,13 @@ replaces="llvm$_prevmajorver"
 #
 _prefix="usr/lib/llvm$_majorver"
 
+_llvm_targets="-DLLVM_TARGETS_TO_BUILD=AMDGPU;BPF;WebAssembly"
+case "$CARCH" in
+	arm*) _llvm_targets="$_llvm_targets;ARM";;
+	ppc64le) _llvm_targets="$_llvm_targets;PowerPC";;
+	*) _llvm_targets="" ;;
+esac
+
 prepare() {
 	default_prepare
 
@@ -97,12 +104,6 @@ prepare() {
 	rm -v test/CodeGen/AArch64/wineh4.mir
 	# https://github.com/llvm/llvm-project/issues/47657
 	rm -v test/ExecutionEngine/Interpreter/intrinsics.ll
-
-	local common_targets="AMDGPU;BPF;WebAssembly"
-	case "$CARCH" in
-		arm*) _llvm_targets="-DLLVM_TARGETS_TO_BUILD=ARM;$common_targets";;
-		ppc64le) _llvm_targets="-DLLVM_TARGETS_TO_BUILD=PowerPC;$common_targets";;
-	esac
 
 	# Archs that do not build the X86 target above need to
 	# have llvm-debuginfo-analyzer tests disabled due to:
