--- a/main/kmod/APKBUILD
+++ b/main/kmod/APKBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=kmod
-pkgver=33
-pkgrel=2
+pkgver=34.2
+pkgrel=0
 pkgdesc="Linux kernel module management utilities"
 url="http://git.kernel.org/?p=utils/kernel/kmod/kmod.git;a=summary"
 arch="all"
 options="!check"  # https://bugs.gentoo.org/408915#c3
 license="GPL-2.0-or-later"
 # gnu sed is needed for symlink
-makedepends_build="scdoc libxslt sed"
+makedepends_build="bash coreutils scdoc meson sed"
 makedepends_host="$depends_dev zlib-dev xz-dev zstd-dev openssl-dev>3"
 makedepends="$makedepends_build $makedepends_host"
 triggers="$pkgname.trigger=/lib/modules/*:/usr/lib/modules/*"
@@ -17,34 +17,31 @@ subpackages="
 	$pkgname-doc
 	$pkgname-libs
 	$pkgname-bash-completion
+	$pkgname-fish-completion
+	$pkgname-zsh-completion
 	"
-source="https://kernel.org/pub/linux/utils/kernel/kmod/kmod-$pkgver.tar.xz
-	strndupa.patch
-	"
+source="https://kernel.org/pub/linux/utils/kernel/kmod/kmod-$pkgver.tar.xz"
 
 build() {
 	if [ -z "$BOOTSTRAP" ]; then
 		export CFLAGS="$CFLAGS -flto=auto"
 	fi
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
+
+	abuild-meson \
 		--bindir=/bin \
-		--sysconfdir=/etc \
-		--with-zlib \
-		--with-xz \
-		--with-zstd \
-		--with-openssl
-	make
+		--sbindir=/sbin \
+		-Dfishcompletiondir=/usr/share/fish/vendor_completions.d \
+		. output
+	meson compile -C output
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
-	local i
-	mkdir -p "$pkgdir"/sbin
-	for i in lsmod rmmod insmod modinfo modprobe depmod; do
-		ln -sf ../bin/$i "$pkgdir"/sbin/$i
+	DESTDIR="$pkgdir" meson install --no-rebuild -C output
+
+	local d
+	for d in depmod.d modprobe.d; do
+		rmdir "$pkgdir"/usr/lib/$d
+		rmdir "$pkgdir"/etc/$d
 	done
 }
 
@@ -54,6 +51,5 @@ libs() {
 }
 
 sha512sums="
-32d79d0bb7e89012f18458d4e88325f8e19a7dba6e1d5cff01aec3e618d1757b0f7c119735bf38d02e0d056a14273fd7522fca7c61a4d12a3ea5854bb662fff8  kmod-33.tar.xz
-2f8edc669fe1de8d92ed88ec37de44454f144631651c46c6b907597c7c3c298f2d3098b83544288baa72226b09d4b0946c056e802488289d2739773a21cd8b81  strndupa.patch
+0e095c45ad61a6c61ce1ad61b9aa10cf5040e688b749f9a933b0e7d12de493c58027a5068b459cbbce05576fc564a22b83a3dbef1e6511b2a3e27034c88afd33  kmod-34.2.tar.xz
 "
