community/kunitconversion: add Python bindings

--- a/community/kunitconversion/APKBUILD
+++ b/community/kunitconversion/APKBUILD
@@ -1,11 +1,9 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-
 # The group tag is just to easily find this APKBUILD by some scripts for automation
 # group=kde-frameworks
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kunitconversion
 pkgver=6.12.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Support for unit conversion"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
@@ -17,10 +15,28 @@ depends_dev="
 makedepends="$depends_dev
 	doxygen
 	extra-cmake-modules
+	py3-build
+	py3-setuptools
 	qt6-qttools-dev
 	samurai
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	"
+case "$CARCH" in
+	riscv64) ;;
+	*)
+		makedepends="$makedepends
+			py3-shiboken6
+			pyside6-dev
+			python3-dev
+			"
+		subpackages="$subpackages
+			py3-$pkgname:_py3"
+		;;
+esac
 _repo_url="https://invent.kde.org/frameworks/kunitconversion.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kunitconversion-$pkgver.tar.xz"
 options="net" # net required for tests
@@ -40,6 +56,10 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" cmake --install build
+}
+
+_py3() {
+	amove usr/lib/python*
 }
 
 sha512sums="
