--- a/community/tigervnc/APKBUILD
+++ b/community/tigervnc/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Patrycja Rosa <alpine@ptrcnull.me>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=tigervnc
-pkgver=1.13.1
-pkgrel=5
-_xorg_version=21.1.7
+pkgver=1.15.0
+pkgrel=0
+_xorg_version=21.1.16
 pkgdesc="High performance, multi-platform VNC client and server"
 url="https://tigervnc.org/"
 arch="all"
@@ -54,7 +54,7 @@ makedepends="
 subpackages="$pkgname-openrc $pkgname-doc $pkgname-lang $pkgname-client"
 source="
 	https://github.com/TigerVNC/tigervnc/archive/refs/tags/v$pkgver/tigervnc-$pkgver.tar.gz
-	https://www.x.org/releases/individual/xserver/xorg-server-$_xorg_version.tar.xz
+	https://x.org/releases/individual/xserver/xorg-server-$_xorg_version.tar.xz
 	0001-fix-gettext-intl.patch
 	vncserver.initd
 	vncserver.confd
@@ -65,14 +65,9 @@ prepare() {
 	default_prepare
 
 	# prepare xorg-server tree
-	mkdir -p "$builddir"/build-xvnc/unix
-	cp -r "$builddir"/unix/xserver "$builddir"/unix/*.patch \
-		"$builddir"/build-xvnc/unix
-	cp -r "$srcdir"/xorg-server-$_xorg_version/* \
-		"$builddir"/build-xvnc/unix/xserver
-	cd "$builddir"/build-xvnc/unix/xserver
-	patch -p1 < ../xserver21.1.1.patch
-	autoreconf -fi
+	cp -r "$srcdir"/xorg-server-$_xorg_version/* "$builddir"/unix/xserver/
+	cd "$builddir"/unix/xserver
+	patch -p1 < "$builddir"/unix/xserver21.patch
 }
 
 build() {
@@ -90,13 +85,13 @@ build() {
 		$CMAKE_CROSSOPTS
 	cmake --build .
 
-	cd "$builddir"/build-xvnc/unix/xserver
+	cd "$builddir"/unix/xserver
 	local _fontroot="/usr/share/fonts"
 	# from community/xorg-server
-	export CFLAGS="$CFLAGS -D_GNU_SOURCE -D__gid_t=gid_t -D__uid_t=uid_t -Wno-error=array-bounds"
 	export CFLAGS="${CFLAGS/-fno-plt}"
 	export CXXFLAGS="${CXXFLAGS/-fno-plt}"
 	export LDFLAGS="$LDFLAGS -Wl,-z,lazy"
+	autoreconf -fi
 	./configure --disable-config-hal \
 		--disable-config-udev \
 		--disable-dmx \
@@ -112,6 +107,7 @@ build() {
 		--disable-xvfb \
 		--disable-xwin \
 		--enable-glx \
+		--disable-unit-tests \
 		--with-default-font-path="$_fontroot/misc,$_fontroot/100dpi:unscaled,$_fontroot/75dpi:unscaled,$_fontroot/TTF,$_fontroot/Type1" \
 		--with-pic \
 		--with-serverconfig-path=/usr/lib/xorg \
@@ -129,7 +125,7 @@ package() {
 	depends="perl xinit xkbcomp xkeyboard-config"
 
 	DESTDIR="$pkgdir" cmake --install .
-	install -Dm755 build-xvnc/unix/xserver/hw/vnc/Xvnc \
+	install -Dm755 unix/xserver/hw/vnc/Xvnc \
 		-t "$pkgdir"/usr/bin
 	mv "$pkgdir"/usr/libexec/vncserver "$pkgdir"/usr/bin
 	rmdir "$pkgdir"/usr/libexec
@@ -146,8 +142,8 @@ client() {
 }
 
 sha512sums="
-9190dbcd3b57ba52286c158c0675104d68463d7e3ea8e23493514b64451ddb511f3daf0f177339bc231155daea376d9c8dc58216663e10aa12f67468f4559da5  tigervnc-1.13.1.tar.gz
-e2a093381e28da9b2aa700c6609349fa851f4ca8df23c776f30e4e2733e7a6c1b257576b93f4c4e87fb09df901385bf52528982f6e7a6ad469597aeae8640bb5  xorg-server-21.1.7.tar.xz
+0b550296b5bd06ac9d63ce10861ff54d24e79b6ac1551d80e9b81845fa873d85bfd684112c66d86188c9c61fdffb9421ea8696c1c7fd15a24fb1bf6bfe6a5e05  tigervnc-1.15.0.tar.gz
+38fd4232a293a497d13f8b57e85e84cf6a531453a7d8d5de1a77d67ceaf8714d5770951a8a21f1b3f519e83be1fc0926dce269846e75a8b11aa1062dd507f67d  xorg-server-21.1.16.tar.xz
 1b60d758d2ff727c12fc9f754f2632d62b99f83a71e0f3fc8d07b643c85e18171430becdd36eee84223bc59ebcaf743e4451335fd01c2b0fe764df4853afc583  0001-fix-gettext-intl.patch
 a81962b8019e59fd667fb344989c5c38725e803bad43b2fdd977c29bd0b7d32dca1797cf0b6af5ba9071b0a1d7c9628a28b3fafd374ef8241e7e2401406401dc  vncserver.initd
 257dba90313eacb38b7f5fcec06fa0b280dcb23d92b91f675c954db4c5adf889e402c903148115934a83f3107477a10a73388320de7c11e203247f04764ddd72  vncserver.confd
