testing/dcmtk: enable on all architectures

--- a/testing/dcmtk/APKBUILD
+++ b/testing/dcmtk/APKBUILD
@@ -6,9 +6,7 @@ _pkgver=${pkgver//./}
 pkgrel=0
 pkgdesc="OFFIS DICOM toolkit"
 url="https://dcmtk.org/"
-# armhf: compile fails with bad immediate value for offset
-# loongarch64: compile fails with error libtiff-4
-arch="all !armhf !loongarch64"
+arch="all"
 license="BSD-3-Clause"
 makedepends="
 	cmake
