community/rclone: install rclone and mount.rclone side-to-side
There is no reason to have them split, since other mount commands are
also installed under /usr.

Relates https://gitlab.alpinelinux.org/alpine/aports/-/issues/16514#note_454997

--- a/community/rclone/APKBUILD
+++ b/community/rclone/APKBUILD
@@ -53,8 +53,8 @@ package() {
 	install -Dm755 "$builddir"/rclone \
 		"$pkgdir"/usr/bin/rclone
 
-	mkdir -p "$pkgdir"/sbin
-	ln -sfv ../usr/bin/rclone "$pkgdir"/sbin/mount.rclone
+	mkdir -p mkdir -p "$pkgdir"/usr/sbin
+	ln -sfv ../bin/rclone "$pkgdir"/usr/sbin/mount.rclone
 	ln -sfv rclone "$pkgdir"/usr/bin/rclonefs
 
 	install -Dm644 "$builddir"/rclone.1 \
@@ -68,7 +68,7 @@ package() {
 
 	install -Dm644 "$builddir"/rclone.zsh \
 		"$pkgdir"/usr/share/zsh/site-functions/_rclone
-	
+
 	install -Dm644 COPYING \
 		"$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
