--- a/testing/rclone-browser/APKBUILD
+++ b/testing/rclone-browser/APKBUILD
@@ -5,10 +5,7 @@ pkgver=1.8.0
 pkgrel=1
 pkgdesc="Simple cross-platform GUI for rclone"
 url="https://github.com/kapitainsky/RcloneBrowser"
-# riscv64 blocked by binutils-gold -> rclone
-# s390x blocked by rclone -> gh/cronokirby/saferith#51
-# loongarch64: blocked by rclone -> saferith
-arch="all !riscv64 !s390x !loongarch64"
+arch="all"
 license="MIT"
 depends="rclone"
 makedepends="cmake qt5-qttools-dev qt5-qtdeclarative-dev"
