community/lldb: upgrade to 20.1.2

--- a/community/lldb/APKBUILD
+++ b/community/lldb/APKBUILD
@@ -3,8 +3,8 @@
 # Maintainer:
 pkgname=lldb
 # Note: Update together with llvm.
-pkgver=19.1.7
-pkgrel=2
+pkgver=20.1.2
+pkgrel=0
 _llvmver=${pkgver%%.*}
 pkgdesc="Next generation, high-performance debugger"
 arch="all"
@@ -15,6 +15,7 @@ makedepends="
 	clang$_llvmver-dev
 	clang$_llvmver-static
 	cmake
+	curl-dev
 	doxygen
 	gtest-dev
 	libedit-dev
@@ -105,7 +106,7 @@ py3() {
 }
 
 sha512sums="
-332e8766cb074bc83ef6c5526ef53a56714d6f08629649c49b956fe166fbf69da41df82f7c3a29397e36664cce2ff8b846dcc4e3d88a610614d1660040a6f44a  lldb-19.1.7.src.tar.xz
-3ff56e1a61dbace35d8c168ad5c94c5a09d92eb683494bfe1deabcb3640cf79b7422d44903d049d2298d54c2874f9a60c4f13f6795a3949e7eaefd5d42e62621  cmake-19.1.7.src.tar.xz
+fc02acf2e8549c104744db6403979161ac743cf1821ad1b7b1f5d887f80186943dddd12add8e902ec850495c2031b89da785fe68ee97abc1d7adc594847acfac  lldb-20.1.2.src.tar.xz
+8825b0161e167ca2ae31c86df7cf9b3499d10a3f93bd1af9711fb5f86e46a1253d7ee2a104fd33816f27deee57033afcda96eb45a6f45bb25fbaabe87330ca88  cmake-20.1.2.src.tar.xz
 5b65acf109e4b1e22411216d4b023f9975ea1fb04ec011fa71741fa7d13e3a0f1af2f9d4886782a73172f21c9debadf618fd814db04cfd98462a42b0f39e4c4a  llvm_slug.py
 "
