community/telegraf: remove binutils-gold from makedepends

--- a/community/telegraf/APKBUILD
+++ b/community/telegraf/APKBUILD
@@ -9,7 +9,7 @@ pkgdesc="A plugin-driven server agent for collecting & reporting metrics, part o
 url="https://www.influxdata.com/time-series-platform/telegraf/"
 arch="x86_64 aarch64"
 license="MIT"
-makedepends="go binutils-gold linux-headers"
+makedepends="go linux-headers"
 checkdepends="tzdata bash"
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc $pkgname-doc"
