main/util-linux: move ionice and setpriv to /bin
busybox installs ionice and setpriv in /bin, and thus results in
them being installed in two locations concurrently

--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=1
+pkgrel=2
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -168,7 +168,9 @@ package() {
 
 	# Move to /bin to overwrite busybox's version.
 	mv "$pkgdir"/usr/bin/getopt \
-		"$pkgdir"/usr/bin/rev "$pkgdir"/bin
+		"$pkgdir"/usr/bin/rev \
+		"$pkgdir"/usr/bin/ionice \
+		"$pkgdir"/bin
 
 	# use pkg-config
 	install -D -m755 "$srcdir"/rfkill.initd "$pkgdir"/etc/init.d/rfkill
@@ -243,6 +245,8 @@ _mv_bin() {
 		setpriv)
 			license="GPL-2.0-or-later"
 			pkgdesc="Run a program with different Linux privilege settings"
+			# busybox has setpriv under /bin
+			mv "$pkgdir"/usr/bin/setpriv "$pkgdir"/bin
 			;;
 		sfdisk)
 			license="GPL-1.0-or-later"
