--- a/testing/anki/APKBUILD
+++ b/testing/anki/APKBUILD
@@ -1,15 +1,16 @@
 # Contributor: Alexander Bocken <alexander@bocken.org>
+# Contributor: Callum Andrew <contact@candrew.net>
 # Maintainer: Frank Oltmanns <alpine@oltmanns.dev>
 pkgname=anki
-pkgver=24.11
-pkgrel=1
+pkgver=25.02.1
+pkgrel=0
 # Remember to update the following lines when updating the pkgver
 # 1. checkout the release tag
 # 2. anki -> git rev-parse --short=8 $pkgver
 # 3. ftl -> git submodule
-_tags_ftl_core="e1545f7f0ddeb617eeb1ca86e82862e552843578"
-_tags_ftl_desktop="e0f9724f75f6248f4e74558b25c3182d4f348bce"
-_anki_commit="8e5efc59"
+_tags_ftl_core="0fe0162f4a18e8ef2fbac1d9a33af8e38cf7260e"
+_tags_ftl_desktop="17216b03db7249600542e388bd4ea124478400e5"
+_anki_commit="272cac5b"
 
 # This APKBUILD and the patches use the PKGBUILD for Anki 23.10 as
 # a basis.
@@ -20,7 +21,7 @@ _caches_cargo="cargo-cache"
 _core_i18n_repo="anki-core-i18n"
 _qtftl_i18n_repo="anki-desktop-ftl"
 
-pkgdesc="flashcard program using spaced repetition"
+pkgdesc="Flashcard program using spaced repetition"
 url="https://apps.ankiweb.net/"
 
 # py3-pyqt6-webengine is only available for
@@ -104,9 +105,15 @@ prepare() {
 	export CARGO_HOME="$srcdir/$_caches_cargo"       # do not litter in ~
 	cargo fetch --target="$CTARGET" --locked
 
+	# Remove any corepack references to build with normal system yarn
+	rm -f yarn.lock
+	sed -i 's/"type": "module",/"type": "module"/' package.json
+	sed -i '/packageManager/d' package.json
+	sed -i 's/"corepack enable yarn"/"true"/' ./build/ninja_gen/src/node.rs
+
 	# fetch node packages already in prepare()
 	export YARN_CACHE_FOLDER="$srcdir/$_caches_yarn" # do not litter in ~
-	yarn install --frozen-lockfile --modules-folder out/node_modules --ignore-scripts
+	yarn install --modules-folder out/node_modules --ignore-scripts
 	ln -sf out/node_modules ./
 
 	# mask pip-sync as we provide dependencies ourselves
@@ -145,9 +152,9 @@ package() {
 }
 
 sha512sums="
-b3ca07e1fac4367ee2ec45911d6c4ba51cfe5a004d393ce1bdcaf677ab11dcf96e926108569f929aaf70326351b224042efeccfd98dd4533e1acd6cc60945690  anki-24.11.tar.gz
-aeb24c9f39ccbaeaf524b343432f4748a6297cf04e3ad6673a7b6e090e6363949e3d26dbc1695551098fa997fc0dcbf63aca878ceac7d04683a75dc384f3fba6  anki-core-i18n-e1545f7f0ddeb617eeb1ca86e82862e552843578.tar.gz
-e6bc5a8a6832a8dfd5d43684a196f340623402c77d071809aa51c2ac894f92f599d53f87b435fc009c684e28b5a5ab8ba4fbe6ca01f2576f4cb5fc773cb14ffd  anki-desktop-ftl-e0f9724f75f6248f4e74558b25c3182d4f348bce.tar.gz
+6d2aa242d25563dcd30e304b8ff5240dd35d8d70b85b5c567470aa510e32ce0ed7c35032a13dec5a4ba40e1726bdb12d1f61bf2975223cbbaa743c1b59d7d338  anki-25.02.1.tar.gz
+c72eaea9e0f350d092a44f7623a7cfdcb74ff99a97ca4b53c51b1b26af387c9c6cd64bfca3dc4577c14c3ee4040b8ce1a7a50f2e209b0fa47c5297f97c92a910  anki-core-i18n-0fe0162f4a18e8ef2fbac1d9a33af8e38cf7260e.tar.gz
+6d91607c6b0805e6dfce8a93dbf46ac945e9b1631aa054cb98e513d7a6da64d905035b8da8ea5d10c0d700a0aa96b056748d956342fe4ddf7232f7f7540ee88a  anki-desktop-ftl-17216b03db7249600542e388bd4ea124478400e5.tar.gz
 36c3bddb5de84f0f5eebe46b506b9723ecc80dd69281b3d2ffc9842fa2db181ececd8232ae0b3366bcfd5cb68a4d760abcadd3dada2a7ce2d2da26586a132e09  no-update.patch
 f71b45b08b8f05d98faab3a88d7ba2847a948a12ca26c682d58541dc423ad72ae8aac5b34155472869ebbf195e5e5c488cfc4e640df7247c7674e5dfad053d60  strip-formatter-deps.patch
 2c7d1ab46d81e65f22e63cb5af37daef27a78d348f240570f9250730d6b33311670876027fd1c54d4c69922c18a7458e82211cb232e98591e182ac11c49877db  strip-type-checking-deps.patch
