community/qcoro: upgrade to 0.12.0

--- a/community/qcoro/APKBUILD
+++ b/community/qcoro/APKBUILD
@@ -1,11 +1,11 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qcoro
-pkgver=0.11.0
+pkgver=0.12.0
 pkgrel=0
 pkgdesc="C++ Coroutines for Qt"
 url="https://qcoro.dvratil.cz"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="MIT"
 depends_dev="
 	qt5-qtbase-dev
@@ -16,11 +16,12 @@ depends_dev="
 	"
 makedepends="$depends_dev
 	cmake
+	qt6-qtdeclarative-private-dev
 	samurai
 	"
 checkdepends="
 	dbus-x11
-	xvfb-run
+	xwayland-run
 	"
 subpackages="$pkgname-dev $pkgname-qt6"
 source="https://github.com/danvratil/qcoro/archive/v$pkgver/qcoro-v$pkgver.tar.gz"
@@ -47,12 +48,12 @@ build() {
 
 check() {
 	cd build-qt5
-	xvfb-run ctest
+	wlheadless-run -- ctest
 
 	cd "$builddir"/build-qt6
 
 	# test-qcorolocalsocket fails
-	xvfb-run ctest -E "test-qcorolocalsocket"
+	wlheadless-run -- ctest -E "test-qcorolocalsocket"
 }
 
 package() {
@@ -67,5 +68,5 @@ qt6() {
 }
 
 sha512sums="
-bde5c5cd9f3c038e6b5ec5a6adae5ae2218edd9df350e75fc5d8db31d9339484e92cc88fdc37fa0539e0cdf1f53731418ebfa73b94564e993d7b02168988771b  qcoro-v0.11.0.tar.gz
+f1da90c4a9bec5f52ec9f40caa30c8465658c6ff005c6c7e89aeb97acc4aefd5e34030493b7e51313a6d2b3fc59114f6ed6751f31f1c132ece173f0e22154c37  qcoro-v0.12.0.tar.gz
 "
