community/go: fix missing depends on arm

--- a/community/go/APKBUILD
+++ b/community/go/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=go
 # go binaries are statically linked, security updates require rebuilds
 pkgver=1.24.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Go programming language compiler"
 url="https://go.dev/"
 arch="all"
@@ -19,7 +19,7 @@ source="https://go.dev/dl/go$pkgver.src.tar.gz
 	tests-fchmodat-not-supported.patch
 	"
 case "$CARCH" in
-	arm*|aarch64) depends="binutils-gold";;
+	arm*|aarch64) depends="$depends binutils-gold";;
 	riscv64|loongarch64)
 		# binutils-gold is not supported on riscv64 and loongarch64.
 		checkdepends="${checkdepends/binutils-gold/}"
