testing/usbmuxd: split udev rules into subpackage
The provided udev rules automatically start the service when a
compatible device is detected, and attempt to stop it when all devices
are unplugged.

There are no reports of this working on Alpine; this automagically
started service does not seem to work properly. Specifically, it
won't allow interacting with iOS devices, which it the sole purpose of
this package.

Starting the service manually (or via OpenRC) does work. When
this rule is present, the two instances seem to race each other, and the
manually started usbmuxd only works _sometimes_. A manually started
instance works every time with the udev rule is not present.

Split the udev rule into a sub-package, allowing those who want to
experiment using it to opt-in, while getting it out of the way for the
typical use case.

---

Footnote: I actually run usbmuxd building the latest master from source,
since the latest stable release isn't compatible with devices from the
last several years. Other tools pull usbmuxd as a dependency, and the
rule interferes even in that case.

--- a/testing/usbmuxd/APKBUILD
+++ b/testing/usbmuxd/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="Krassy Boykinov <kboykinov@teamcentrixx.com>"
 pkgname=usbmuxd
 pkgver=1.1.1
-pkgrel=8
+pkgrel=9
 pkgdesc="Socket Daemon to multiplex connections from iOS"
 url="https://libimobiledevice.org"
 arch="all"
@@ -16,7 +16,7 @@ makedepends="
 	"
 license="GPL-2.0-or-later"
 install="$pkgname.post-install"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-doc $pkgname-udev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/libimobiledevice/usbmuxd/archive/$pkgver.tar.gz
 	001-confiure-no-udev.patch
 	libplist-2.3.0.patch
@@ -45,6 +45,11 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+}
+
+udev() {
+	install_if="eudev usbmuxd=$pkgver-r$pkgrel"
+	amove usr/lib/udev
 }
 
 sha512sums="
