community/nedit: simplify and minor fixes
- Before only the doc/faq.txt was included in the doc package
- Let abuild handle stripping
- Include correct version in docs
- Build docs on riscv64 (simplifies some logic)
- Build everything with a single make call

--- a/community/nedit/APKBUILD
+++ b/community/nedit/APKBUILD
@@ -3,40 +3,34 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=nedit
 pkgver=5.7
-pkgrel=1
+pkgrel=2
 pkgdesc="The Nirvana Editor, a multi-purpose X11 editor that's easy to use"
 url="https://sourceforge.net/projects/nedit/"
 arch="all"
 license="GPL-2.0-or-later"
 # perl for docs, bison and flex are used but may be optional
-makedepends="$depends_dev motif-dev bison flex perl"
-[ "$CARCH" != "riscv64" ] && subpackages="$pkgname-doc"
+makedepends="
+	bison
+	flex
+	motif-dev
+	perl
+	"
+subpackages="$pkgname-doc"
 source="https://downloads.sourceforge.net/project/nedit/nedit-source/nedit-$pkgver-src.tar.gz
 	fix-build.patch
 	"
 options="!check" # No tests
 
 build() {
-	make linux
-	if [ "$CARCH" != "riscv64" ]; then
-		make docs
-		make -j1 docs
-	fi
+	VERSION="NEdit $pkgver" make linux docs
 }
 
 package() {
-	install -s -Dm 0755 source/nedit "$pkgdir"/usr/bin/nedit
-	install -s -Dm 0755 source/nc "$pkgdir"/usr/bin/nedit-nc
-}
+	install -Dm 0755 source/nedit "$pkgdir"/usr/bin/nedit
+	install -Dm 0755 source/nc "$pkgdir"/usr/bin/nedit-nc
 
-doc() {
-	default_doc
-
-	cd "$builddir"
-	for i in README COPYRIGHT ReleaseNotes \
-		doc/nedit.doc doc/nedit.html doc/faq.txt; do
-		install -Dm 0644 $i "$subpkgdir"/usr/share/doc/nedit
-	done
+	install -Dm 0644 -t "$pkgdir"/usr/share/doc/nedit/ \
+		README COPYRIGHT ReleaseNotes doc/nedit.doc doc/nedit.html doc/faq.txt
 }
 
 sha512sums="
