--- a/community/gnuradio/APKBUILD
+++ b/community/gnuradio/APKBUILD
@@ -6,9 +6,8 @@ pkgrel=4
 pkgdesc="General purpose DSP and SDR toolkit"
 url="https://www.gnuradio.org"
 # loongarch64, s390x: tests fail
-# riscv64: build took way to long in pipeline
 # ppc64le: blocked by mpir
-arch="all !loongarch64 !ppc64le !s390x !riscv64"
+arch="all !loongarch64 !ppc64le !s390x"
 license="GPL-3.0-or-later"
 depends="
 	py3-cairo
