--- a/main/c-ares/APKBUILD
+++ b/main/c-ares/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=c-ares
-pkgver=1.34.4
+pkgver=1.34.5
 pkgrel=0
 pkgdesc="Asynchronous DNS/names resolver library"
 url="https://c-ares.org/"
@@ -17,6 +17,8 @@ subpackages="
 source="https://github.com/c-ares/c-ares/releases/download/v$pkgver/c-ares-$pkgver.tar.gz"
 
 # secfixes:
+#   1.34.5-r0:
+#     - CVE-2025-31498
 #   1.27.0-r0:
 #     - CVE-2024-25629
 #   1.17.2-r0:
@@ -49,5 +51,5 @@ utils() {
 }
 
 sha512sums="
-3285e14d94bc736d6caddfe7ad7e3c6a6e69d49b079c989bb3e8aba4da62c022e38229d1e691aaa030b7d3bcd89e458d203f260806149a71ad9adb31606eae02  c-ares-1.34.4.tar.gz
+386709e9f405034cb16ba514f9792e89992be52b24a237e6c51f1032e4ca99a8c57b1c3038d6f0a205202a3bfb1246bb95ff0d5e6fc0ee2bba1cb17f6677f97f  c-ares-1.34.5.tar.gz
 "
