--- a/main/ack/APKBUILD
+++ b/main/ack/APKBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=ack
-pkgver=3.8.1
+pkgver=3.8.2
 pkgrel=0
 pkgdesc="Perl-powered replacement for grep"
 url="https://beyondgrep.com/"
 arch="noarch"
 license="Artistic-2.0"
 depends="perl perl-file-next"
-checkdepends="bash"
+checkdepends="bash perl-yaml-pp"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/P/PE/PETDANCE/ack-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
+options="!check" # checkdepends in community/
 
 build() {
 	PERL_MM_USE_DEFAULT=1 perl -I. Makefile.PL \
@@ -31,5 +32,5 @@ package() {
 }
 
 sha512sums="
-b2d4878b95745a077d3bbe2c6a710e76444fd98d64ce0ae8e07ebdd5dacde142b28a7c0a8f9676f090cedae8690b02d08b827fce697012610f97311915a04746  ack-v3.8.1.tar.gz
+b643f888e96b96195cdbde205be862a9d862476797d14c3f2665e88ed9c990dba3eb9f73756a68a373541c348fd61f2bb3f69f07625dfa67d465f786f80abd94  ack-v3.8.2.tar.gz
 "
