testing/ostui: upgrade to 1.0.3

--- a/testing/ostui/APKBUILD
+++ b/testing/ostui/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Sean E. Russell <ser@ser1.net>
 # Maintainer: Sean E. Russell <ser@ser1.net>
 pkgname=ostui
-pkgver=0.2.2
+pkgver=1.0.3
 pkgrel=0
 pkgdesc="A terminal client for OpenSubsonic servers"
 url="https://git.sr.ht/~ser/ostui"
@@ -19,7 +19,7 @@ build() {
 
 check() {
 	go test ./...
-	[ "$(./ostui -version)" = "ostui v$pkgver" ]
+	[ "$(./ostui --version)" = "ostui v$pkgver" ]
 }
 
 package() {
@@ -29,5 +29,5 @@ package() {
 }
 
 sha512sums="
-e5204f3a194493664352dfae8a1bebb918949758fd36d36dc1287935b8ea935b4dfc47eb552a375823040063e3385c7c31ab56e0f7a8d9908a626de9feb106ac  ostui-0.2.2.tar.gz
+32fd3c42f9e1f13bdc770a4bc60bccf9fbc2c24cd220651cb20f8d4940a59ab8717dca80e7ea86e59ac332710824b83a2ebc91b166b79e0f6c17bc5eb5e82368  ostui-1.0.3.tar.gz
 "
