--- a/community/ibus/APKBUILD
+++ b/community/ibus/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: mio <miyopan@e.email>
 maintainer="mio <miyopan@e.email>"
 pkgname=ibus
-pkgver=1.5.31
-pkgrel=1
+pkgver=1.5.32
+pkgrel=0
 pkgdesc="Next Generation Input Bus for Linux"
 url="https://github.com/ibus/ibus/wiki"
 arch="all"
@@ -31,9 +31,7 @@ subpackages="
 	"
 # if $pkgver tarball not found, switch to $pkgver-rc$n
 # https://github.com/ibus/ibus/issues/2584
-source="https://github.com/ibus/ibus/releases/download/$pkgver/ibus-$pkgver.tar.gz
-	gcc15.patch
-	"
+source="https://github.com/ibus/ibus/releases/download/$pkgver/ibus-$pkgver.tar.gz"
 install="$pkgname.post-install"
 
 prepare() {
@@ -111,6 +109,5 @@ pyc() {
 }
 
 sha512sums="
-adfad740002662262981ddfcc3f6eb1e898433d3bd90b07535ceef367d496d3da3e0836e59133d0063caf2d3d55d0deb6cf18ae2807fdd1ce4afab84a7725ca5  ibus-1.5.31.tar.gz
-9649491b2f847f1d10e797c5e355be1d064da499d199f88bbe69d132c34a8b4fcecb095e336e6b64a902dce190dee9ad62c0c7d20ef905c5d183cec937e31f2c  gcc15.patch
+2c63cab1fe553cb8f3ce00d22f3374e396f8cb3f9e66b81b8c8c59d141eb68d036549460ac0b836e93b0261c185a33aba0fc930178fd04d142344324e1562b9c  ibus-1.5.32.tar.gz
 "
