community/rook: upgrade to 0.2.6

--- a/community/rook/APKBUILD
+++ b/community/rook/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Sean E. Russell <ser@ser1.net>
 # Maintainer: Sean E. Russell <ser@ser1.net>
 pkgname=rook
-pkgver=0.2.4
-pkgrel=1
+pkgver=0.2.6
+pkgrel=0
 pkgdesc="Lightweight, stand-alone, headless secret service tool backed by a Keepass v2 database"
 url="https://sr.ht/~ser/rook"
 arch="all"
@@ -27,7 +27,7 @@ check() {
 package() {
 	install -Dm755 rook -t "$pkgdir"/usr/bin/
 	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/"$pkgname"/
-	install -Dm644 README.md CHANGELOG.md -t "$pkgdir"/usr/share/doc/"$pkgname"/
+	install -Dm644 README.md CHANGELOG.md SECURITY.md -t "$pkgdir"/usr/share/doc/"$pkgname"/
 	install -Dm644 man1/* -t "$pkgdir"/usr/share/man/man1/
 	install -Dm755 utils/autotype.sh "$pkgdir"/usr/bin/rook-autotype
 	install -Dm755 utils/getAttr.sh "$pkgdir"/usr/bin/rook-getattr
@@ -50,5 +50,5 @@ getattr() {
 }
 
 sha512sums="
-01e5b6f183bf8c9257a443d78c874f1a3df5f084ecb64b3c324be9d1f41bd36bf9c52fdeeb7c5d9d7f87564e26177564eec2703cf0c6f85bbe717c846ddc5c5b  rook-0.2.4.tar.gz
+4f3b203c13952aaa7a30a52fbd7c21b24a859894c49555d39a8be273ae71ff1f37c271d491cb2f9eb0d5b608ca4ad314edc538948ac2ddc06b2a666d4ed1ad78  rook-0.2.6.tar.gz
 "
