--- a/community/gajim/APKBUILD
+++ b/community/gajim/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Peter Shkenev <santurysim@gmail.com>
 # Maintainer: Peter Shkenev <santurysim@gmail.com>
 pkgname=gajim
-pkgver=2.0.4
+pkgver=2.1.0
 pkgrel=0
 _pkgver_suffix=""
 pkgdesc="A full featured and easy to use XMPP client"
@@ -38,7 +38,7 @@ makedepends="
 	"
 checkdepends="xvfb-run font-dejavu py3-pytest"
 source="
-	https://gajim.org/downloads/${pkgver%.*}/gajim-$pkgver.tar.gz
+	https://dev.gajim.org/gajim/gajim/-/archive/$pkgver/gajim-$pkgver.tar.bz2
 	"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-pyc"
 
@@ -67,5 +67,5 @@ lang() {
 }
 
 sha512sums="
-33a8aa77a834c604af5e619d22094f53cd612d3ae184b7588bafdbf64534d107b8d2749cca06b4266b8f8416b68faf312deafdf5f15e5b6dec5334c480c41289  gajim-2.0.4.tar.gz
+88de044ba8cbdd70c128da674fe938acb20e9a2e07a6a5310a59e33e438220a866204f4ddab46b72dca19f958faed69bb18c79f2c82b20301a906b18ef41185a  gajim-2.1.0.tar.bz2
 "
