community/radicale: upgrade to 3.5.1, take over maintainership
https://github.com/Kozea/Radicale/blob/v3.5.1/CHANGELOG.md

--- a/community/radicale/APKBUILD
+++ b/community/radicale/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Contributor: Michał Polański <michal@polanski.me>
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=radicale
-pkgver=3.4.1
+pkgver=3.5.1
 pkgrel=0
 pkgdesc="Free and open-source CalDAV and CardDAV server"
 url="https://radicale.org/"
@@ -50,7 +50,7 @@ package() {
 }
 
 sha512sums="
-6907fd696dac25eff85114673f182b6998872d02549147a894cd69654c44a0bec3a51adbf69dacde0c4cd9b7e3005dda8edc6c11f237df514ba3d06508684191  radicale-3.4.1.tar.gz
+937368e6c68be560760fb1551c8d62029e9b5294d3def86493fc59eebce4ec5eacdf48b64ebb4e480ef6d4d7d903d723d6b8aa2603e6daaa8dfd4a20caf009b5  radicale-3.5.1.tar.gz
 f1eb4477ca7d7d8040837b712289f18d6b62c7f862a8e9bea32968a49b8bf4394360b5440c815aa23df48ba0aaac61bcb8c9d6e7575c3b23da2ac05a45eac194  radicale.initd
 09bb6228ba07039b97b317d4547a33b7ebf9c8f47ff72b870fc2f5e46de620e0614d993c5c96d73f0ad6196d469bb0f7206478781abf314af1d598e3132d678e  radicale.confd
 "
