testing/solanum: upgrade to 6.0.0

--- a/testing/solanum/APKBUILD
+++ b/testing/solanum/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: nadvagauser <nadvagauser+alpine@proton.me>
 pkgname=solanum
-pkgver=5.0.0
+pkgver=6.0.0
 pkgrel=0
 pkgdesc="A pomodoro timer for the GNOME desktop"
 url="https://gitlab.gnome.org/World/Solanum"
@@ -21,11 +21,7 @@ checkdepends="
 	desktop-file-utils
 	"
 subpackages="$pkgname-lang"
-source="
-	https://gitlab.gnome.org/World/Solanum/-/archive/$pkgver/Solanum-$pkgver.tar.gz
-	appdata.patch
-	update-cargo.patch
-	"
+source="https://gitlab.gnome.org/World/Solanum/-/archive/$pkgver/Solanum-$pkgver.tar.gz"
 builddir="$srcdir/Solanum-$pkgver"
 
 
@@ -43,7 +39,5 @@ package() {
 }
 
 sha512sums="
-db05b11ff42b83047bc1c5554b76db60caddb0dd928a7735b8a003fd0a9bc1415400c0a435695bc2a15176b2601510b73ceb824cbaa221a5ff2f94497d07e93d  Solanum-5.0.0.tar.gz
-0e13c997e5a1efa7b9a6fdf23c83567fc0af589758f6cb0996f1bf2a011606f7d7d7c76531a54defd8858bb1abfa4fca63362c9c70c38556a5f12aa7d9ddf8f6  appdata.patch
-6f4a4bdbcee60dbca27d4a986f5f9a3791efe8ad2aab6faceb01a478b959bf66d175ab1ac4836473778acee211a17cbb653c7a3dae14daea4417f9d1af245e31  update-cargo.patch
+321e1969fb3ed195692cf8c9d0357373cf18c6f23fdd827cfb6a059f49d793cdcbd99434f8a9c6d9447b411aec7e534cd83ef5cabf666a52498a78a3228135fc  Solanum-6.0.0.tar.gz
 "
