--- a/community/gosec/APKBUILD
+++ b/community/gosec/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Clayton Craft <clayton@craftyguy.net>
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=gosec
-pkgver=2.22.1
-pkgrel=1
+pkgver=2.22.3
+pkgrel=0
 pkgdesc="Go source code static analyzer, focusing on security"
 url="https://github.com/securego/gosec"
 arch="all"
@@ -10,7 +10,7 @@ license="Apache-2.0"
 makedepends="go"
 source="$pkgname-$pkgver.tar.gz::https://github.com/securego/gosec/archive/refs/tags/v$pkgver.tar.gz"
 # downloads go deps into GOBIN and runs them
-options="!check"
+options="!check net"
 
 export GOBIN=/tmp
 export GOCACHE="${GOCACHE:-"$srcdir/go-cache"}"
@@ -30,5 +30,5 @@ package() {
 }
 
 sha512sums="
-99b061beb021a52e14cd90faebac868f4112e00f2156d022de5abcd883dee3046565239ec7d8f2543035ddf2f02c5fc08354047737607c9313e26cdfcb93cd84  gosec-2.22.1.tar.gz
+7dacf2f91a753b3ebe19d47eccaee9d75b8e84ac1582c433321eede6dea28513d68aaaee7579aab21e7f6839c2a1cfc7b5465c79243377cc45d87a7a4dba5d31  gosec-2.22.3.tar.gz
 "
