--- a/community/dotnet8-runtime/APKBUILD
+++ b/community/dotnet8-runtime/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=dotnet8-runtime
-pkgver=8.0.14
+pkgver=8.0.15
 pkgrel=0
 _gittag=v$pkgver
 _giturl="https://github.com/dotnet/dotnet"
@@ -162,6 +162,8 @@ builddir="$srcdir"/dotnet-${_gittag/v}
 #     - CVE-2025-21176
 #   8.0.14-r0:
 #     - CVE-2025-24070
+#   8.0.15-r0:
+#     - CVE-2025-26682
 
 _checkdir="$srcdir"/dotnet-bunny-${_bunnytag/v}
 _testdir="$srcdir"/dotnet-regular-tests-$_testtag
@@ -603,8 +605,8 @@ aspnetcore_targeting_pack() {
 }
 
 sha512sums="
-281b97ffbb29a1f2cc6129ade17019257cc80a9ce62d2044ee19f2f80d1616578f1d82815a0e0ce8a7f7f8becd641785dfa6ae60de03dd41a764b24a9306f3e3  dotnet-tarball-v8.0.14.tar.gz
-d8e26a6a02d134cfdcba9e4d4026b86ba75560a885b20b37008021182ef19e397b64b6356dde62d032fc663afa05de8068f7010e78aa53ab2584e33d032eae7b  dotnet-release-v8.0.14.json
+8f4888d7b8433c30d01e22a15289626464c92817259cf914d60c589f15f3a680ae4b19f512ec552e05caa132774aed0b8f17e91a8442be74eabf5e161b145584  dotnet-tarball-v8.0.15.tar.gz
+001c78c575ebb5281eb52287015939af6ce57d594822b57f49793b4075d4ff7befef2293d017fe8e3b4c26ca33264c2a1c77bf47c22457af92d0669e03ba7449  dotnet-release-v8.0.15.json
 69181ea34dafaacf95a267675a2c1dc75c37fcf331e540a9e3ee4f80709572c7523dd4370a786ad5c885356d05ec83b27c9bbcae6adac01b78d9aa2ac69ed719  dotnet-testsuite-4f2372af276898d8acbe92d77af30da86920bbce.tar.gz
 7f59b10878aa90a6953ee4d88d08fa932910a24018dace92b173ee87c847d14734f93dc5fc031982a3d0a5cb4ac223b83d0e548531c23c4e3326dc83510989a9  dotnet-bunny-v15.tar.gz
 c3f31956976b77198e72a3fef3427338b6b2961f8c121416040c1105de0ce8073e46f4c2e9ef22a001aee69cbe39621c2ddac988522693110071dfae42f2e2b7  dotnet.sh.in
