--- a/community/dotnet9-runtime/APKBUILD
+++ b/community/dotnet9-runtime/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=dotnet9-runtime
-pkgver=9.0.3
+pkgver=9.0.4
 pkgrel=0
 _gittag=v$pkgver
 _giturl="https://github.com/dotnet/dotnet"
@@ -136,6 +136,8 @@ builddir="$srcdir"/dotnet-${_gittag/v}
 #     - CVE-2025-21176
 #   9.0.3-r0:
 #     - CVE-2025-24070
+#   9.0.4-r0:
+#     - CVE-2025-26682
 
 _checkdir="$srcdir"/dotnet-bunny-${_bunnytag/v}
 _testdir="$srcdir"/dotnet-regular-tests-$_testtag
@@ -607,8 +609,8 @@ aspnetcore_targeting_pack() {
 }
 
 sha512sums="
-7cbb2f0d8fc7dec39c1bf22a68e04656c3f5a6847f850108d7998d63646140b40237e1f36746a2f3f7d1577270bba37cc70d2a600b883effda4baa0e5cd6b514  dotnet-tarball-v9.0.3.tar.gz
-3049b089c94248c71a762df5eee76aed69eaea81c5ef67736637e743088e592c3d63fb07dceb4b4a14906ae66d01f91e51f474e622dd1e9be20627667b07e799  dotnet-release-v9.0.3.json
+5061b1fa37c04c84ceddd544af8f4d917aaaa56b8c6b97a68282654055f7cce8f109d9c36f4c4bbca1c1a8f6251659f906e2915ebb9644bc508ea831e5eeca77  dotnet-tarball-v9.0.4.tar.gz
+770033e89f6c8d1dc1bd10713fef9c51e7a3debad7de597d334335b974d75bbeaf743290889377cfa1933fb17a0523109bf976acf7295ece7cf682da222abf8b  dotnet-release-v9.0.4.json
 f2d627ba7d1c94a0d9952611105fafe49dee4c5aa795cb94744fd96025c8df0106231aad41b33f34e95dbf080cacb591dad9265e3948b7180498b3e786bca268  dotnet-testsuite-26cdb2d8d62a60ddc6114ca585581626ae5e11bd.tar.gz
 7f59b10878aa90a6953ee4d88d08fa932910a24018dace92b173ee87c847d14734f93dc5fc031982a3d0a5cb4ac223b83d0e548531c23c4e3326dc83510989a9  dotnet-bunny-v15.tar.gz
 c3f31956976b77198e72a3fef3427338b6b2961f8c121416040c1105de0ce8073e46f4c2e9ef22a001aee69cbe39621c2ddac988522693110071dfae42f2e2b7  dotnet.sh.in
