community/openvi: upgrade to 7.6.31

--- a/community/openvi/APKBUILD
+++ b/community/openvi/APKBUILD
@@ -1,17 +1,15 @@
 # Contributor: Jason Swank <jswank@scalene.net>
 # Maintainer: Jason Swank <jswank@scalene.net>
 pkgname=openvi
-pkgver=7.6.30
-pkgrel=2
+pkgver=7.6.31
+pkgrel=0
 pkgdesc="OpenVi is a fork of the vi / ex editor included with OpenBSD"
 url="https://github.com/johnsonjh/OpenVi"
 arch="all"
 license="BSD-3-Clause"
 makedepends="ncurses-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/johnsonjh/OpenVi/archive/refs/tags/$pkgver.tar.gz
-	symlinks.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/johnsonjh/OpenVi/archive/refs/tags/$pkgver.tar.gz"
 builddir="$srcdir/OpenVi-$pkgver"
 options="!check" # no tests
 
@@ -24,6 +22,5 @@ package() {
 }
 
 sha512sums="
-2a8e6382cc846073d32df8f63a225b30ca984e9a563007f3afc3183d87583b2b40821a3d1234d60c4a432a7c0696646a336746dac768eab215d54e7cab91aad5  openvi-7.6.30.tar.gz
-a28beff0f3adcd74f1c90be5f111e374737ba4a913f8f2c102a21c45d069ac1d86660f690d488548516dd8ed8b82a833c152a4f7b7fc36f3799e0b315ff4d632  symlinks.patch
+ffdc8f133faa5b52bf90b4ce687f8971c41edcb0608f2bf66a290d62c6f30ff44a07f7f8e638d53f56865949545290013a32f0f6d61086925c2c3898b49d3d97  openvi-7.6.31.tar.gz
 "
