community/liblcf: upgrade to 0.8.1

--- a/community/liblcf/APKBUILD
+++ b/community/liblcf/APKBUILD
@@ -1,20 +1,17 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer: knuxify <knuxify@gmail.com>
 pkgname=liblcf
-pkgver=0.8
-pkgrel=3
+pkgver=0.8.1
+pkgrel=0
 pkgdesc="Library to handle RPG Maker 2000/2003 and EasyRPG projects"
 url="https://easyrpg.org/"
 arch="all"
 license="MIT"
 depends="shared-mime-info" # provides MIME type data
-makedepends="cmake samurai icu-dev expat-dev"
+makedepends="cmake samurai expat-dev icu-dev inih-dev"
 install="$pkgname.post-install"
 subpackages="$pkgname-dev $pkgname-tools:_tools"
-source="https://github.com/EasyRPG/liblcf/archive/refs/tags/$pkgver/liblcf-$pkgver.tar.gz
-	include-cstdint.patch
-	Require-C++17.patch
-	"
+source="https://github.com/EasyRPG/liblcf/archive/refs/tags/$pkgver/liblcf-$pkgver.tar.gz"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -43,7 +40,5 @@ _tools() {
 }
 
 sha512sums="
-54f3c2d330e82cbf7a17256cfe9a17e968895bb58968c212d4e3604d79f9c1e0492163ab01c53f060cffd8ee7f4280bb8ac939be110927f6a524c1799ba335b5  liblcf-0.8.tar.gz
-e52609272e6416e20f961553d711acc08671029f77b8c54d8e6cb8da0c4cfa7d6aacd68c918ad81f634fba1d68e3342b61f52a13bb5b39acda256f2baebcf2b4  include-cstdint.patch
-7a2d1161fa6a93480bbaa63effe38df052bd217542272775f419876d7d72238144034dba84e61a5e8e3396dd7a15abd3db836ade6f421119bf02e40b9ec8dcaf  Require-C++17.patch
+a8e508bf3af5ebe204a14d172729fd6b24aaa58dfc97f52aca584bc5231b13c7e29113484cfd1f9bfbcb3b108e54fdabb28dbb0ee1a032d4a472e4077a9c3ce4  liblcf-0.8.1.tar.gz
 "
