community/easyrpg-player: upgrade to 0.8.1, switch to SDL3, enable more options

--- a/community/easyrpg-player/APKBUILD
+++ b/community/easyrpg-player/APKBUILD
@@ -1,32 +1,34 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer: knuxify <knuxify@gmail.com>
 pkgname=easyrpg-player
-pkgver=0.8
-pkgrel=3
+pkgver=0.8.1
+pkgrel=0
 pkgdesc="RPG Maker 2000/2003 and EasyRPG games interpreter"
 url="https://easyrpg.org/player/"
 arch="all"
 license="MIT"
 makedepends="cmake
+	fluidsynth-dev
 	fmt-dev
 	freetype-dev
 	harfbuzz-dev
+	inih-dev
 	liblcf-dev
 	libpng-dev
 	libsamplerate-dev
 	libsndfile-dev
 	libvorbis-dev
+	libxmp-dev
 	mpg123-dev
+	nlohmann-json
 	opusfile-dev
 	pixman-dev
 	samurai
-	sdl2-dev
+	sdl3-dev
 	zlib-dev
 "
 subpackages="$pkgname-doc $pkgname-bash-completion"
-source="https://easyrpg.org/downloads/player/$pkgver/easyrpg-player-$pkgver.tar.xz
-	$pkgname-$pkgver-fmt10.patch::https://github.com/EasyRPG/Player/commit/a4672d2e30db4e4918c8f3580236faed3c9d04c1.patch
-	"
+source="https://easyrpg.org/downloads/player/$pkgver/easyrpg-player-$pkgver.tar.xz"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -37,6 +39,7 @@ build() {
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
+		-DPLAYER_TARGET_PLATFORM=SDL3 \
 		-GNinja \
 		$CMAKE_CROSSOPTS
 	cmake --build build
@@ -51,6 +54,5 @@ package() {
 }
 
 sha512sums="
-b1caf45284e29706bdd885d132fe7605d1f2972a3b3e238ba2fbd40058ae1c31aac5277fced23bd216153feb9a440a2652ef696b6b310b907fbc3c1376aa03ad  easyrpg-player-0.8.tar.xz
-cfd43e825ad5a36e4fbae7e67399ba3c02fd872b51d2f206cf89b408115387afc5cbed7e18eea985779423e0346fc2a019df501495301cd7229729722f36093b  easyrpg-player-0.8-fmt10.patch
+f2adbc73f8699e63df56edee3a7fd282e05ce99a680f03a7053f0d337a93f7f9979c88ef33b82a37d50dcb67a465ceea36a785092434983deb248ecb8db3327d  easyrpg-player-0.8.1.tar.xz
 "
