main/libwebsockets: enable external poll support

--- a/main/libwebsockets/APKBUILD
+++ b/main/libwebsockets/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libwebsockets
 pkgver=4.3.5
-pkgrel=0
+pkgrel=1
 pkgdesc="C library for lightweight websocket clients and servers"
 url="https://libwebsockets.org/"
 arch="all"
@@ -36,14 +36,15 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_VERBOSE_MAKEFILE=TRUE \
 		-DLWS_IPV6=ON \
+		-DLWS_LINK_TESTAPPS_DYNAMIC=ON \
 		-DLWS_WITH_EVLIB_PLUGINS=1 \
+		-DLWS_WITH_EXTERNAL_POLL=On \
 		-DLWS_WITH_GLIB=ON \
-		-DLWS_WITH_LIBUV=ON \
 		-DLWS_WITH_LIBEV=ON \
 		-DLWS_WITH_LIBEVENT=ON \
-		-DLWS_WITH_STATIC=OFF \
-		-DLWS_LINK_TESTAPPS_DYNAMIC=ON \
-		-DLWS_WITH_SDEVENT=OFF
+		-DLWS_WITH_LIBUV=ON \
+		-DLWS_WITH_SDEVENT=OFF \
+		-DLWS_WITH_STATIC=OFF
 	cmake --build build
 }
 
