main/python3: security upgrade to 3.11.12
https://docs.python.org/release/3.11.12/whatsnew/changelog.html#python-3-11-12

--- a/main/python3/APKBUILD
+++ b/main/python3/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Sheila Aman <sheila@vulpine.house>
 pkgname=python3
 # the python3-tkinter's pkgver needs to be synchronized with this.
-pkgver=3.11.11
+pkgver=3.11.12
 _basever="${pkgver%.*}"
 pkgrel=0
 pkgdesc="High-level scripting language"
@@ -48,6 +48,8 @@ options="net" # Required for tests
 builddir="$srcdir/Python-$pkgver"
 
 # secfixes:
+#   3.11.12-r0:
+#     - CVE-2025-0938
 #   3.11.11-r0:
 #     - CVE-2024-9287
 #   3.11.10-r0:
@@ -263,6 +265,6 @@ pyc2() {
 }
 
 sha512sums="
-3ff90f15f725fa8d06686158aaddb887a247b03ca4dc1fdfd81a8efb53373db3e8673bd0b3de30bb7669f3f07d9854e9d8a2dbcd49b18d15b8172787a53a0a9e  Python-3.11.11.tar.xz
+5c95900de73cd187f5d7a89a05314ef85f4d680308d0d5fff5e6ada81f8ecf030018bef0f1a819d007e8b6d01b52e50395572c2d1a56d2c164492e13a69a9926  Python-3.11.12.tar.xz
 ab8eaa2858d5109049b1f9f553198d40e0ef8d78211ad6455f7b491af525bffb16738fed60fc84e960c4889568d25753b9e4a1494834fea48291b33f07000ec2  musl-find_library.patch
 "
