community/firefox: try building with mimalloc

--- a/community/firefox/APKBUILD
+++ b/community/firefox/APKBUILD
@@ -52,6 +52,7 @@ makedepends="
 	m4
 	mesa-dev
 	mesa-dri-gallium
+	mimalloc2-insecure
 	nasm
 	nodejs
 	nspr-dev
@@ -584,6 +585,16 @@ build() {
 
 	export CBUILD CHOST builddir
 	envsubst < "$srcdir"/mozconfig > base-mozconfig
+
+	case "$CARCH" in
+	# mimalloc clashes with scudo in a weird way here
+	x86) ;;
+	# default allocator returns oom ( and, in turn, std::bad_alloc in clang )
+	# at even ~70% of host memory usage
+	*)
+		export LD_PRELOAD=/usr/lib/libmimalloc-insecure.so.2
+		;;
+	esac
 
 	case "$CARCH" in
 	aarch64|x86_64|ppc64le)
