community/py3-josepy: upgrade to 2.0.0
This reverts commit 9bf0af8884763cc4d99a58b54cb1e8a7dea4182c.

--- a/community/certbot/APKBUILD
+++ b/community/certbot/APKBUILD
@@ -14,7 +14,7 @@ depends="
 	py3-cryptography
 	py3-distro
 	py3-distutils-extra
-	py3-josepy<2
+	py3-josepy
 	py3-parsedatetime
 	py3-pyrfc3339
 	py3-setuptools
