testing/virtualgl: upgrade to 3.1.2

--- a/testing/virtualgl/APKBUILD
+++ b/testing/virtualgl/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=virtualgl
-pkgver=3.1
+pkgver=3.1.2
 pkgrel=0
 pkgdesc="Toolkit to run remote OpenGL applications with full 3D hardware acceleration"
 url="https://virtualgl.org/"
@@ -22,7 +22,7 @@ makedepends="
 	xcb-util-keysyms-dev
 	"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://downloads.sourceforge.net/project/virtualgl/$pkgver/VirtualGL-$pkgver.tar.gz
+source="https://github.com/VirtualGL/virtualgl/releases/download/$pkgver/VirtualGL-$pkgver.tar.gz
 	install.patch
 	"
 builddir="$srcdir/VirtualGL-$pkgver"
@@ -45,10 +45,10 @@ package() {
 	mv "$pkgdir"/usr/bin/glxinfo "$pkgdir"/usr/bin/virtualgl-glxinfo
 
 	# not required
-	rm "$pkgdir"/usr/bin/.vglrun.vars64
+	rm -f "$pkgdir"/usr/bin/.vglrun.vars64
 }
 
 sha512sums="
-cd1109b4dee426918e61348b22b3bfb0c45102bbb0bcde9b78c36b607a396bbff7d7c72cf3bf9626128da0f1776c42bbb59be863239e60e0f7307d2a73de463b  VirtualGL-3.1.tar.gz
-3ccd2133d303c10f1447d24ab09c414e59039afe04744964b0dfa1371cf04b32292d46b2436e0feb88774e4d156762e0804bfd9dcd410607419f9754704af4db  install.patch
+5f51691d66645cfca74997b36c442daf4d3fd54ab93b48e501a275a0e8fcc4ecaa71e24665619d40c5561c9598a8d3c224fb3b7ecd3afb56fe0a6ecc350aec5e  VirtualGL-3.1.2.tar.gz
+acd348b3005840869baf3f51b0e66bcfbbc93bab2630460a6801a972a13cf428bfe6bee1fac409fe927f0a9d9f6a498ab08c36c4b892b073511503ab81557089  install.patch
 "
