--- a/testing/virtualgl/APKBUILD
+++ b/testing/virtualgl/APKBUILD
@@ -5,7 +5,8 @@ pkgver=3.1.2
 pkgrel=0
 pkgdesc="Toolkit to run remote OpenGL applications with full 3D hardware acceleration"
 url="https://virtualgl.org/"
-arch="x86_64 ppc64le"
+# loongarch64 unsupported in endian.h
+arch="all !loongarch64"
 license="LGPL-2.1-or-later"
 makedepends="
 	cmake
