main/perl-net-ssleay: fix tests with openssl 3.5.0

--- a/main/perl-net-ssleay/APKBUILD
+++ b/main/perl-net-ssleay/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=perl-net-ssleay
 _pkgreal=Net-SSLeay
 pkgver=1.94
-pkgrel=1
+pkgrel=2
 pkgdesc="Perl extension for using OpenSSL"
 url="https://metacpan.org/release/Net-SSLeay"
 arch="all"
@@ -11,7 +11,10 @@ depends="perl"
 makedepends="perl-dev openssl-dev>3 zlib-dev"
 checkdepends="perl-test-exception perl-test-warn perl-test-nowarnings"
 subpackages="$pkgname-doc"
-source="https://cpan.metacpan.org/authors/id/C/CH/CHRISN/Net-SSLeay-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/C/CH/CHRISN/Net-SSLeay-$pkgver.tar.gz
+	openssl-3.5.patch
+	"
+
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 build() {
@@ -32,4 +35,5 @@ package() {
 
 sha512sums="
 f1461667269f3da56ff7e1724b5511b95c34582250f8336e9f93d30f3b30d4a5360eb27622b9730bba11df75e00d717c7f0cea2120d20206723db136a8509375  Net-SSLeay-1.94.tar.gz
+51253f95461b41f95b4e3014cea7c9440951d01506078fafcec406e1dcc14fe8412e405d12a60ffdced4fe9f18115f5af5b4f492b50725e8cea163e78aef44b7  openssl-3.5.patch
 "
