community/lpa-gtk: upgrade to 0.2

--- a/community/lpa-gtk/APKBUILD
+++ b/community/lpa-gtk/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Luca Weiss <luca@lucaweiss.eu>
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=lpa-gtk
-pkgver=0.1
-pkgrel=1
+pkgver=0.2
+pkgrel=0
 pkgdesc="Download and manage eSIM profiles"
 url="https://codeberg.org/lucaweiss/lpa-gtk"
 license="GPL-3.0-only"
@@ -17,6 +17,8 @@ checkdepends="appstream"
 makedepends="
 	blueprint-compiler
 	desktop-file-utils
+	gtk4.0-dev
+	libadwaita-dev
 	meson
 	"
 source="$pkgname-$pkgver.tar.gz::https://codeberg.org/lucaweiss/lpa-gtk/archive/$pkgver.tar.gz"
@@ -37,5 +39,5 @@ package() {
 }
 
 sha512sums="
-2ffe84069f2166f3d281e43a3c8a194e3119999f0f47a0c2afb036a49d42139c36dbfa335ca9359fd5e3418e415fa2dc05fa7f68edb5d0cf1cf73b7deb689d66  lpa-gtk-0.1.tar.gz
+a29034512d8dcd1e50feee05550f5986afd56a960a4bdd5227c29558356dd98a05277dbb01f1bd09fe93ff51a9c3b51e43e5c61e382d237af054090c8ed5adc6  lpa-gtk-0.2.tar.gz
 "
