--- a/testing/hatch/APKBUILD
+++ b/testing/hatch/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: knuxify <knuxify@gmail.com>
 # Maintainer: knuxify <knuxify@gmail.com>
 pkgname=hatch
-pkgver=1.14.0
+pkgver=1.14.1
 pkgrel=0
 pkgdesc="Modern, extensible Python project management"
 url="https://hatch.pypa.io/latest/"
@@ -26,7 +26,7 @@ depends="
 	py3-zstandard
 	"
 makedepends="py3-gpep517 py3-hatch-vcs"
-checkdepends="py3-pytest"
+checkdepends="py3-pytest py3-trustme"
 source="https://github.com/pypa/hatch/archive/hatch-v$pkgver/hatch-$pkgver.tar.gz
 	packaging-24.2.patch"
 subpackages="$pkgname-pyc"
@@ -55,6 +55,6 @@ package() {
 }
 
 sha512sums="
-fe8bc1daef7fbb71ef4343bcbb15ad2d73aa426644869454bd5c311d17d6897636143984e3223ea10e77858de3f700966649561c7bad8a060afa05008c2a00c9  hatch-1.14.0.tar.gz
+94cea590fc6e86d9d50fc693651055e4d2b8d7d5e46fa7d03072f616e9d353b3c392d1e252111f9de781585ed7073b1dd5522b126039cc8e2ddc9036efe61443  hatch-1.14.1.tar.gz
 35d30acd2774a79f1671c5d0ed0a75c8848e980e0e867b9ca89695c387fa53556081730ae90d2b5e37c44236c1b6c28d45f2010e29b7fc87772d031752fda9f9  packaging-24.2.patch
 "
