--- a/community/sdl2/APKBUILD
+++ b/community/sdl2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Simon Zeni <simon@bl4ckb0ne.ca>
 pkgname=sdl2
 pkgver=2.32.4
-pkgrel=0
+pkgrel=1
 pkgdesc="development library designed to provide low level access to audio, keyboard, mouse, joystick and graphics"
 url="https://www.libsdl.org"
 arch="all"
@@ -13,6 +13,7 @@ makedepends="
 	cmake
 	eudev-dev
 	jack-dev
+	libdecor-dev
 	libsamplerate-dev
 	libx11-dev
 	libxcursor-dev
