community/sdl3: add libdecor-dev to makedepends
Enables window decorations for Wayland compositors without SSD.

--- a/community/sdl3/APKBUILD
+++ b/community/sdl3/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Simon Zeni <simon@bl4ckb0ne.ca>
 pkgname=sdl3
 pkgver=3.2.10
-pkgrel=0
+pkgrel=1
 pkgdesc="development library designed to provide low level access to audio, keyboard, mouse, joystick and graphics"
 url="https://www.libsdl.org"
 arch="all"
@@ -12,6 +12,7 @@ makedepends="
 	cmake
 	eudev-dev
 	jack-dev
+	libdecor-dev
 	libsamplerate-dev
 	libx11-dev
 	libxcursor-dev
