--- a/testing/php82-snappy/APKBUILD
+++ b/testing/php82-snappy/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php82-snappy
 _extname=snappy
-pkgver=0.2.1
-pkgrel=1
+pkgver=0.2.3
+pkgrel=0
 pkgdesc="Snappy extension for PHP 8.2"
 url="https://github.com/kjdev/php-ext-snappy"
 arch="all"
@@ -12,9 +12,7 @@ _phpv=82
 _php=php$_phpv
 depends="$_php-common"
 makedepends="$_php-dev $_php-pecl-apcu snappy-dev"
-source="php-$_extname-$pkgver.tar.gz::https://github.com/kjdev/php-ext-snappy/archive/$pkgver.tar.gz
-	https://github.com/kjdev/php-ext-snappy/commit/c27f830dcfe6c41eb2619a374de10fd0597f4939.patch
-	"
+source="php-$_extname-$pkgver.tar.gz::https://github.com/kjdev/php-ext-snappy/archive/$pkgver.tar.gz"
 builddir="$srcdir/php-ext-snappy-$pkgver"
 
 build() {
@@ -43,6 +41,5 @@ package() {
 }
 
 sha512sums="
-51cdfe7c5d020cb954cbf555038aca8398867584a587eb838f07089612d3978a182d0bc04015608a2aaf71bf9a5b5896e5d92b56f3b2d5fe9e1116f9509acb1e  php-snappy-0.2.1.tar.gz
-4f45438e6f5b8784bff45c5791628af905c70a4b1adf1f3b7248f52d7b41648b07e10e833f3f3ae60f24d421ad302a8a1ab4e464697df9bc36b8fc7a3f0cb3cc  c27f830dcfe6c41eb2619a374de10fd0597f4939.patch
+92f324ae4c5bd1450cc35bbc64ae5bac20cd4e822c6983adbc68778f12f738ba5392d81302ed19acb1555437719519e88e4bb8bbf783d934e77189ad2e39c27c  php-snappy-0.2.3.tar.gz
 "
