main/openssh: move sshd-auth to server subpackages
The user authentication phase was moved from sshd-session to sshd-auth
in openssh-10.0_p1 and therefore needs to be moved and shipped in the
relevant server subpackages.

--- a/main/openssh/APKBUILD
+++ b/main/openssh/APKBUILD
@@ -5,7 +5,7 @@
 pkgname=openssh
 pkgver=10.0_p1
 _myver=${pkgver%_*}${pkgver#*_}
-pkgrel=0
+pkgrel=1
 pkgdesc="Port of OpenBSD's free SSH release"
 url="https://www.openssh.com/portable.html"
 arch="all"
@@ -53,7 +53,7 @@ source="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/openssh-$_myver.tar
 	avoid-redefined-warnings-when-building-with-utmps.patch
 	default-internal-sftp.patch
 	include-config-dir.patch
-	sshd-session-flavor.patch
+	sshd-flavor.patch
 	disable-fzero-call-used-regs-used-on-ppc64le.patch
 
 	sshd.initd
@@ -139,14 +139,16 @@ build() {
 	if [ -z "$BOOTSTRAP" ] && [ -z "$APORTS_BOOTSTRAP" ]; then
 		msg "Building openssh with pam support..."
 		_do_configure --without-kerberos5 --with-pam --with-pam-service=sshd
-		SSHD_SESSION_FLAVOR=.pam make
+		SSHD_FLAVOR=.pam make
 		mv sshd sshd.pam
+		mv sshd-auth sshd-auth.pam
 		mv sshd-session sshd-session.pam
 
 		msg "Building openssh with kerberos5"
 		_do_configure --with-kerberos5 --with-pam
-		SSHD_SESSION_FLAVOR=.krb5 make
+		SSHD_FLAVOR=.krb5 make
 		mv sshd sshd.krb5
+		mv sshd-auth sshd-auth.krb5
 		mv sshd-session sshd-session.krb5
 		mv ssh ssh.krb5
 
@@ -167,10 +169,12 @@ check() {
 	if [ -z "$BOOTSTRAP" ] && [ -z "$APORTS_BOOTSTRAP" ]; then
 		msg "verify pam build"
 		strings sshd.pam | grep sshd-session.pam
+		scanelf -n sshd-auth.pam | grep libpam
 		scanelf -n sshd-session.pam | grep libpam
 
 		msg "verify krb5 build"
 		strings sshd.krb5 | grep sshd-session.krb5
+		scanelf -n sshd-auth.krb5 | grep krb5
 		scanelf -n sshd-session.krb5 | grep krb5
 		scanelf -n sshd.krb5 | grep krb5
 		scanelf -n ssh.krb5 | grep krb5
@@ -189,7 +193,8 @@ package() {
 	make DESTDIR="$pkgdir" install
 	if [ -z "$BOOTSTRAP" ] && [ -z "$APORTS_BOOTSTRAP" ]; then
 		install -m755 -t "$pkgdir"/usr/sbin/ sshd.pam sshd.krb5
-		install -m755 -t "$pkgdir"/usr/lib/ssh/ sshd-session.pam sshd-session.krb5
+		install -m755 -t "$pkgdir"/usr/lib/ssh/ \
+			sshd-session.pam sshd-auth.pam sshd-session.krb5 sshd-auth.krb5
 		install -m755 -t "$pkgdir"/usr/bin/ ssh.krb5
 		install -Dm644 "$srcdir"/sshd.pam "$pkgdir"/etc/pam.d/sshd
 	fi
@@ -284,6 +289,7 @@ server() {
 	depends="openssh-keygen=$pkgver-r$pkgrel openssh-server-common=$pkgver-r$pkgrel"
 
 	amove usr/sbin/sshd
+	amove usr/lib/ssh/sshd-auth
 	amove usr/lib/ssh/sshd-session
 }
 
@@ -298,6 +304,7 @@ _server_with_flavor() {
 	fi
 
 	amove usr/sbin/sshd.$_flavor
+	amove usr/lib/ssh/sshd-auth.$_flavor
 	amove usr/lib/ssh/sshd-session.$_flavor
 }
 
@@ -308,7 +315,7 @@ sha512sums="
 e85754b2b6c4c37b432d166e63d6293e58c9c8bb6ebd8d3527c83afa2337f14c06d6a4e008ffcc0afd7dc3409e960b89c1dde41d2543c4be7d4813d477ff3a5e  avoid-redefined-warnings-when-building-with-utmps.patch
 1fb55aae445dfd9ededeba1f204a0c3e4a752128ad0a388f473ace074e68b040112f309192243621fd4f16b0d1cce4f083612b1639c3e18166abf92babe52c93  default-internal-sftp.patch
 ff73563e6018e94a1b2dd320cf32426f3945c0f4aa509eeb95783c34dd5c5c8dec91f6d71e4d538c4735539a4d8c724cf61d71513887d8a96b84109ae3a5562e  include-config-dir.patch
-b530574e65302a1e4e8cf5064c220b273a915e9c09506c571da27e0b94eb8aa8d356cad4fa021566a128c9147d6f41c36de77103169ff4ae22b7585184bd7877  sshd-session-flavor.patch
+8a8003c13c8c9545dd684fce8cbff9887e37ab325db8554e0bd937ca5f954f362cd0d4b822fffb38c141d2be621c16eb15df9711a36473a7fe378e5496decce1  sshd-flavor.patch
 6250ab32cd1018c6372b0c5c61eeb091fba3d9c99da56078d1bdfb89b06b90dab373c3a22b61acde577f29834f17a704e263b6e2a67e8234426e947a42a04d6f  disable-fzero-call-used-regs-used-on-ppc64le.patch
 2cab1b844d4efb53f848308b4aaedbe74888d2e85bcb2e4dfdae7c18ac3ecea707829072a4276fbe90dfe2f537bbf48127d96f29ec5154e96c0bfb7437910d53  sshd.initd
 be7dd5f6d319b2e03528525a66a58310d43444606713786b913a17a0fd9311869181d0fb7927a185d71d392674857dea3c97b6b8284886227d47b36193471a09  sshd.confd
