main/po4a: move diffutils from makedepends to depends

--- a/main/po4a/APKBUILD
+++ b/main/po4a/APKBUILD
@@ -4,13 +4,13 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=po4a
 pkgver=0.73
-pkgrel=1
+pkgrel=2
 pkgdesc="Tools for helping translation of documentation"
 url="https://po4a.org/"
 arch="noarch"
 license="GPL-2.0-or-later"
-depends="gettext perl perl-pod-parser perl-syntax-keyword-try"
-makedepends="diffutils docbook-xsl perl-module-build"
+depends="diffutils gettext perl perl-pod-parser perl-syntax-keyword-try"
+makedepends="docbook-xsl perl-module-build"
 subpackages="$pkgname-doc $pkgname-lang"
 source="https://github.com/mquinson/po4a/releases/download/v$pkgver/po4a-$pkgver.tar.gz"
 options="!check" # test_requires missing: SGMLS and Unicode::GCString
