--- a/community/firefox/APKBUILD
+++ b/community/firefox/APKBUILD
@@ -588,7 +588,10 @@ build() {
 
 	case "$CARCH" in
 	# mimalloc clashes with scudo in a weird way here
-	x86) ;;
+	# we can try to minimize memory usage instead by reducing parallels
+	x86)
+		export MOZ_PARALLEL_BUILD=4
+		;;
 	# default allocator returns oom ( and, in turn, std::bad_alloc in clang )
 	# at even ~70% of host memory usage
 	*)
