main/bash-completion: fix conflict with kmod completions

--- a/main/bash-completion/APKBUILD
+++ b/main/bash-completion/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Lucas Ramage <ramage.lucas@protonmail.com>
 pkgname=bash-completion
 pkgver=2.14.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Command-line tab-completion for bash"
 url="https://github.com/scop/bash-completion"
 arch="noarch"
@@ -24,6 +24,7 @@ _conflicting="
 	hd
 	hexdump
 	hwclock
+	insmod
 	ionice
 	look
 	makepkg
@@ -31,6 +32,7 @@ _conflicting="
 	newgrp
 	renice
 	rfkill
+	rmmod
 	rtcwake
 	su
 	nmcli
