community/apk-exporter: explicitly depend on apk-tools

--- a/community/apk-exporter/APKBUILD
+++ b/community/apk-exporter/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: fossdd <fossdd@pwned.life>
 pkgname=apk-exporter
 pkgver=0.1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Prometheus exporter for apk-tools"
 url="https://codeberg.org/fossdd/apk-exporter"
 arch="noarch"
 license="Unlicense"
 depends="
+	apk-tools
 	python3
 	py3-prometheus-client
 	"
