--- a/community/php84-pecl-imagick/APKBUILD
+++ b/community/php84-pecl-imagick/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php84-pecl-imagick
 _extname=imagick
-pkgver=3.8.0_rc2
+pkgver=3.8.0
 _pkgver=${pkgver/_rc/RC}
 pkgrel=0
 pkgdesc="PHP 8.4 extension provides a wrapper to the ImageMagick library - PECL"
@@ -46,5 +46,5 @@ package() {
 }
 
 sha512sums="
-f94ef037df8afb371b8b8b0cac96fc72e4719b0c73537b65ceb36ba5db10b6b172b94374b41349ffba6854fa1177344007bf528e378cb720fe562fd9d4170185  php-pecl-imagick-3.8.0_rc2.tgz
+9ed2eda2220ab96e23587cfea9e2030a2e7084abf12753c3fff37e76fa2611d67149928d480d51fd8e2d0e3219058bd206bd30c6c436595f93d4158fbd051623  php-pecl-imagick-3.8.0.tgz
 "
