community/kwin: backport upstream requested patch
Fixes a common crash and will be part of KWin 6.3.5

--- a/community/kwin/APKBUILD
+++ b/community/kwin/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kwin
 pkgver=6.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="An easy to use, but flexible, composited Window Manager"
 # armhf blocked by qt6-qtdeclarative
 arch="all !armhf"
@@ -101,7 +101,9 @@ case "$pkgver" in
 esac
 
 _repo_url="https://invent.kde.org/plasma/kwin.git"
-source="https://download.kde.org/$_rel/plasma/$_pkgver/kwin-$pkgver.tar.xz"
+source="https://download.kde.org/$_rel/plasma/$_pkgver/kwin-$pkgver.tar.xz
+	0001-kwin-also-clean-up-pending-commits-with-legacy-modesetting.patch
+	"
 # Broken, fails to setup due to missing or invalid XDG_RUNTIME_DIR?
 options="!check"
 
@@ -129,4 +131,5 @@ package() {
 }
 sha512sums="
 34205039e0499a988babdb7081df4d908c2b1e8d93cd4f8d6fff14c275b54ab0f5e80b5ca830612f5176d11969e71fe4174b806fb9da3ab04580caa88463131f  kwin-6.3.4.tar.xz
+d0401a0cf15609133a4b175aec78b7f4fb131c7156ae58144e6f72a1eeb79c7d8cfe172cf6a32fba76add8c0c19b3460afaf1b401629f09365a5e8304841613b  0001-kwin-also-clean-up-pending-commits-with-legacy-modesetting.patch
 "
