community/stargazer-gmi: upgrade to 1.3.2
https://git.sr.ht/~zethra/stargazer/refs/1.3.2

--- a/community/stargazer-gmi/APKBUILD
+++ b/community/stargazer-gmi/APKBUILD
@@ -1,14 +1,15 @@
 # Contributor: Sashanoraa <sasha@noraa.gay>
 # Maintainer: mio <miyopan@e.email>
+maintainer="mio <miyopan@e.email>"
 pkgname=stargazer-gmi
-pkgver=1.3.1
+pkgver=1.3.2
 pkgrel=0
 pkgdesc="Fast and easy to use Gemini server"
 url="https://sr.ht/~zethra/stargazer/"
 arch="all"
 license="AGPL-3.0-or-later"
 makedepends="cargo cargo-auditable scdoc"
-checkdepends="py3-cryptography"
+checkdepends="py3-cryptography py3-urllib3"
 subpackages="
 	$pkgname-doc
 	$pkgname-openrc
@@ -27,11 +28,11 @@ prepare() {
 }
 
 build() {
-	CGFLAGS='--frozen --release' ./scripts/build
+	CGFLAGS="--frozen --release" ./scripts/build
 }
 
 check() {
-	CARGO_ARGS='--release' ./scripts/test --skip IPv6Address,SCGIVars
+	CARGO_ARGS="--release" ./scripts/test
 }
 
 package() {
@@ -46,5 +47,5 @@ package() {
 }
 
 sha512sums="
-c92c5e5820656ebb062076ab6b72e8b74e8802c8f4731e8404dcaaf4b8c3a17eac47c19d968e43d1198365a60632bf7a470395bd43c2b80a4196735c0841e7a8  stargazer-gmi-1.3.1.tar.gz
+cef29e1706561d7594b55f0cb579ca2df101a8c88449c58b99db920b2af0b0dd37f27e3b5faca842b884686e3accb337689ed6fe93df3446057f596a979ab95b  stargazer-gmi-1.3.2.tar.gz
 "
